unpackaged/main/default/objects/Account/fields/another222222__c.field-meta.xml
<CustomField>
    <fullName>another222222__c</fullName>
    <label>another222222</label>
    <type>AutoNumber</type>
</CustomField>