unpackaged/main/default/objects/Account/fields/ext_Id__c.field-meta.xml
<CustomField>
    <fullName>ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>ext_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>