unpackaged/main/default/objects/Account/fields/test_incrementor__c.field-meta.xml
<CustomField>
    <fullName>test_incrementor__c</fullName>
    <label>test-incrementor</label>
    <type>AutoNumber</type>
</CustomField>