unpackaged/main/default/objects/Account/recordTypes/aaa.recordType-meta.xml
<RecordType>
    <fullName>aaa</fullName>
    <active>true</active>
    <label>aaa</label>
</RecordType>